Eevee: assert with volume defines #52510

Closed
opened 2017-08-23 17:44:25 +02:00 by Dalai Felinto · 5 comments

Blender Version
Broken: 659be38760
Worked: 659be387607^

Short description of error

BLI_assert failed: /home/guest/src/blender/blender/source/blender/draw/engines/eevee/eevee_materials.c:320, eevee_get_volume_defines(), at 'options < VAR_MAT_MAX'

Exact steps for others to reproduce the error
Open the wasp_bot.blend from the Eevee demo sample files.

**Blender Version** Broken: 659be387607 Worked: 659be387607^ **Short description of error** ``` BLI_assert failed: /home/guest/src/blender/blender/source/blender/draw/engines/eevee/eevee_materials.c:320, eevee_get_volume_defines(), at 'options < VAR_MAT_MAX' ``` **Exact steps for others to reproduce the error** Open the `wasp_bot.blend` from the Eevee demo sample files.
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Clément Foucault was assigned by Dalai Felinto 2017-08-23 17:44:42 +02:00
Author
Owner

Added subscribers: @iimilkmanii, @EmilianoColantoni

Added subscribers: @iimilkmanii, @EmilianoColantoni

This issue was referenced by 79a1d74c78

This issue was referenced by 79a1d74c78cff7ec402835e4c61850df0f3b1b29

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52510
No description provided.