Eevee: Fix T52510: assert with volume defines.

This assert was not making sense at all. Removing